Fix up doc for Java 17